# give_me_test_env

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
config/: channels.yml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
docker/nginx/conf.d/: app.bootstrap.conf.disabled  app.conf
migrations/: env.py
migrations/versions/: 1b05234702ec_create_stands_table.py  38d2ce9fa981_add_team_to_stands.py
scripts/: connect-bot.sh  setup-env.sh  setup-mattermost.sh
src/: main.py
src/application/: dispatcher.py  formatters.py  interfaces.py  list_command.py  release_command.py  take_command.py
src/domain/: exceptions.py  policy.py  stand.py
src/infrastructure/: apm.py  channels.py  config.py  db.py  logger.py  metrics.py  models.py  repository.py  seeding.py  sentry.py  utils.py
src/presentation/: di.py  exception_handlers.py  health.py  routes.py  schemas.py
src/pytests/api/: test_routes.py  test_schemas.py
src/pytests/commands/: fakes.py  test_dispatcher.py  test_fakes.py  test_list_command.py  test_release_command.py  test_take_command.py
src/pytests/domain/: test_resolution.py  test_stand.py
src/pytests/infrastructure/: test_apm.py  test_channels_registry.py  test_config.py  test_logger.py  test_metrics.py  test_models.py  test_repository.py  test_seeding.py  test_sentry.py
src/pytests/presentation/: test_health.py
