[project]
name = "stands-bot"
version = "0.1.0"
description = "Mattermost stand booking bot"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-multipart>=0.0.32",
    "psycopg[binary]>=3.2",
    "structlog>=26.1.0",
    "sentry-sdk[fastapi]>=2.65.0",
    "prometheus-fastapi-instrumentator>=8.0.2",
    "elastic-apm>=6.26.2",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.15.21",
    "pre-commit>=4.6.0",
]

[tool.pytest.ini_options]
testpaths = ["src/pytests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py312"
extend-exclude = ["examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Form"]
